[iOS] Ignore remainder of scroll if the FullscreenModel is reset.

This CL adds FullscreenModel::IgnoreRemainderOfCurrentScroll(), which
will ignore broadcasted scroll offsets caused by an in-progress scroll.
This allows FullscreenController::ResetModel() to not immediately get
squashed by residual deceleration from a previous scroll.

Bug: 856220
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I6d2823decde1fa2595216aa2b775241043ac944c
Reviewed-on: https://chromium-review.googlesource.com/1132602
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: Stepan Khapugin <stkhapugin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574354}
Former-commit-id: 466efc849bc657dc33b9ec4121ae5895170a2183