ios/chrome/browser/ui/fullscreen/fullscreen_model_unittest.mm
@@ -92,6 +92,30 @@ TEST_F(FullscreenModelTest, ResetForNavigation) {
   EXPECT_EQ(observer().progress(), 1.0);
 }
 
+// Tests that the progress value is not updated if the current scroll is being
+// ignored.
+TEST_F(FullscreenModelTest, IgnoreRemainderOfCurrentScroll) {
+  ASSERT_EQ(model().progress(), 1.0);
+  // Simulate a scroll to a 0.0 progress value in two halves.
+  const CGFloat kHalfProgress = 0.5;
+  const CGFloat kHalfProgressDelta =
+      GetFullscreenOffsetDeltaForProgress(&model(), kHalfProgress);
+  model().SetScrollViewIsDragging(true);
+  model().SetScrollViewIsScrolling(true);
+  model().SetYContentOffset(model().GetYContentOffset() + kHalfProgressDelta);
+  model().SetScrollViewIsDragging(false);
+  ASSERT_EQ(model().progress(), kHalfProgress);
+  // Begin ignoring the scroll while the decelerating.
+  model().IgnoreRemainderOfCurrentScroll();
+  model().SetYContentOffset(model().GetYContentOffset() + kHalfProgressDelta);
+  model().SetScrollViewIsScrolling(false);
+  EXPECT_EQ(model().progress(), kHalfProgress);
+  // Simulate another scroll and verify that the model is no longer ignoring
+  // from the previous call to IgnoreRemainderOfCurrentScroll().
+  SimulateFullscreenUserScrollForProgress(&model(), 1.0);
+  ASSERT_EQ(model().progress(), 1.0);
+}
+
 // Tests that the end progress value of a scroll adjustment animation is used
 // as the model's progress.
 TEST_F(FullscreenModelTest, AnimationEnded) {
