ios/chrome/browser/ui/fullscreen/test/fullscreen_model_test_util.mm
@@ -35,13 +35,18 @@ void SimulateFullscreenUserScrollForProgress(FullscreenModel* model,
                                              CGFloat progress) {
   ASSERT_GE(progress, 0.0);
   ASSERT_LE(progress, 1.0);
+  SimulateFullscreenUserScrollWithDelta(
+      model, GetFullscreenOffsetDeltaForProgress(model, progress));
+}
+
+CGFloat GetFullscreenOffsetDeltaForProgress(FullscreenModel* model,
+                                            CGFloat progress) {
   CGFloat height_delta = model->toolbar_height_delta();
   CGFloat base_offset =
       GetFullscreenBaseOffsetForProgress(model, model->progress());
   CGFloat final_y_content_offset =
       base_offset + (1.0 - progress) * height_delta;
-  CGFloat delta = final_y_content_offset - model->GetYContentOffset();
-  SimulateFullscreenUserScrollWithDelta(model, delta);
+  return final_y_content_offset - model->GetYContentOffset();
 }
 
 CGFloat GetFullscreenBaseOffsetForProgress(FullscreenModel* model,
